# GHive

./: NOTICE  README.md
gpu_impl/: CMakeLists.txt
gpu_impl/inc/: ghive_JNIInterface.h
gpu_impl/inc/DataFlow/: Column.hpp  DataFlow.hpp  Table.hpp
gpu_impl/inc/Hdfs/: hdfs.h
gpu_impl/inc/Operator/: AggregationDesc.hpp  Base64.h  BaseJoinPredicate.hpp  FilterOperator.cuh  FilterOperator.hpp  FilterPredicate.hpp  GroupByAggregation.cuh  GroupByOperator.cuh  GroupByOperator.hpp  GroupByPredicate.hpp  JoinOperator.hpp  JoinPredicate.hpp  LimitOperator.hpp  Operator.hpp  PTFOperator.hpp  PTFPredicate.hpp  RSA.h  RSAPerByte.h  SelectOperator.hpp  SelectPredicate.hpp  SingleIntKeyGroupByPredicate.hpp  SinkOperator.hpp  SortMergeJoinPredicate.hpp  TableScanOperator.hpp  UnionOperator.hpp
gpu_impl/inc/Parser/: Parser.hpp
gpu_impl/inc/Profile/: FilterProfiler.hpp  Profiler.hpp  SortGroupByProfiler.hpp  SortMergeJoinProfiler.hpp
gpu_impl/inc/Util/: Util.hpp
gpu_impl/plan/: ssb_10_orc_transformed_1_1.txt  ssb_10_orc_transformed_1_1_extended.txt  ssb_10_orc_transformed_1_2.txt  ssb_10_orc_transformed_1_2_extended.txt  ssb_10_orc_transformed_1_3.txt  ssb_10_orc_transformed_1_3_extended.txt  ssb_10_orc_transformed_2_1.txt  ssb_10_orc_transformed_2_1_extended.txt  ssb_10_orc_transformed_2_2.txt  ssb_10_orc_transformed_2_2_extended.txt  ssb_10_orc_transformed_2_3.txt  ssb_10_orc_transformed_2_3_extended.txt  ssb_10_orc_transformed_3_1.txt  ssb_10_orc_transformed_3_1_extended.txt  ssb_10_orc_transformed_3_2.txt  ssb_10_orc_transformed_3_2_extended.txt  ssb_10_orc_transformed_3_3.txt  ssb_10_orc_transformed_3_3_extended.txt  ssb_10_orc_transformed_3_4.txt  ssb_10_orc_transformed_3_4_extended.txt  ssb_10_orc_transformed_4_1.txt  ssb_10_orc_transformed_4_1_extended.txt  ssb_10_orc_transformed_4_2.txt  ssb_10_orc_transformed_4_2_extended.txt  ssb_10_orc_transformed_4_3.txt  ssb_10_orc_transformed_4_3_extended.txt  ssb_2_orc_1_1.txt  ssb_2_orc_1_1_extended.txt  ssb_2_orc_1_2.txt  ssb_2_orc_1_2_extended.txt  ssb_2_orc_1_3.txt  ssb_2_orc_1_3_extended.txt  ssb_2_orc_1_4_extended.txt  ssb_2_orc_2_1.txt  ssb_2_orc_2_1_extended.txt  ssb_2_orc_2_2.txt  ssb_2_orc_2_2_extended.txt  ssb_2_orc_2_3.txt  ssb_2_orc_2_3_extended.txt  ssb_2_orc_3_1.txt  (+45 more)
gpu_impl/src/: ghive_JNIInterface.cu
gpu_impl/src/DataFlow/: Column.cu  (+2 more)
gpu_impl/test/: FilterPredicateTest.cu  GPUTest.cu  GeneralTest.cu  GroupByPredicateTest.cu  HDFSTest.cu  JoinPredicateTest.cu  OperatorBenchmarkTest.cu  RSATest.cu  SelectPredicateTest.cu  number.txt
(+69 files in other folders)
